...
  final bool inList;
  final VoidCallback? onPressed;

  @override
  Widget build(BuildContext context) {
    return IconButton(
      key: const ValueKey('list-button'),
      tooltip: inList
          ? context.l10n.libraryRemoveFromList
          : context.l10n.libraryAddToList,
      onPressed: onPressed,
      isSelected: inList,
      style: IconButton.styleFrom(
...
